--- a/otherstadiums.html
+++ b/otherstadiums.html
@@ -311,6 +311,11 @@ and change badge opacity to 100%
   		<img class="thumbnail-image" style=" opacity:100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/BayernMunich.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/Bayern.png')">
 		</div>
 		
+		
+<!-- Athletico Madrid			 	-->
+		<div class="image-container">
+  		<img class="thumbnail-image" style=" opacity:5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/AthleticoMadrid.png" alt="#" >
+		</div>
 
 		
 		
@@ -336,10 +341,10 @@ and change badge opacity to 100%
   		<img class="thumbnail-image" style=" opacity:100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/BostonCeltics.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/BostonCeltics.png')">
 		</div>
 		
-<!-- New York Yankees		 	-->
-		<!--<div class="image-container">
-  		<img class="thumbnail-image" style=" opacity:100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Yankees.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/Yankees.png')">
-		</div>-->
+<!-- New York Mets		 	-->
+		<div class="image-container">
+  		<img class="thumbnail-image" style=" opacity:5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/NewYorkMets.png" alt="#" >
+		</div>
 
 		
 		</div>
