--- a/playergraphics.html
+++ b/playergraphics.html
@@ -139,6 +139,8 @@
 		
 		<!-- Image Grid -->
 		<div class="image-grid">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Cleverley-1.png" alt="Tom Cleverley" onclick="openModal(this.src)">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Nuno-1.png" alt="Nuno Espirito Santo" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Pollock-1.png" alt="Mattie Pollock" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Louza-1.png" alt="Imran Louza" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-GibbsWhite-1.png" alt="Morgan Gibbs-White" onclick="openModal(this.src)">
