--- a/otherstadiums.html
+++ b/otherstadiums.html
@@ -314,7 +314,7 @@ and change badge opacity to 100%
 		
 <!-- Athletico Madrid			 	-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style=" opacity:5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/AthleticoMadrid.png" alt="#" >
+  		<img class="thumbnail-image" style=" opacity:100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/AthleticoMadrid.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/AtleticoMadrid.png')">
 		</div>
 
 		
