--- a/playergraphics.html
+++ b/playergraphics.html
@@ -139,6 +139,8 @@
 		
 		<!-- Image Grid -->
 		<div class="image-grid">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Ronaldinho-1.png" alt="Ronaldinho" onclick="openModal(this.src)">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Kane-1.png" alt="Harry Kane" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Donnarumma-1.png" alt="Donnarumma" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Leao-1.png" alt="Rafael Leao" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Cucho-2.png" alt="Cucho Hernandez" onclick="openModal(this.src)">
