--- a/playergraphics.html
+++ b/playergraphics.html
@@ -139,6 +139,8 @@
 		
 		<!-- Image Grid -->
 		<div class="image-grid">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Championship-1.png" alt="EFL Championship 2025/26 Lineup" onclick="openModal(this.src)">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-PerezDuah-1.png" alt="Troy PerezDuah" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Pollock-2.png" alt="Mattie Pollock" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Ronaldinho-1.png" alt="Ronaldinho" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Kane-1.png" alt="Harry Kane" onclick="openModal(this.src)">
