--- a/champ25-26.html
+++ b/champ25-26.html
@@ -158,7 +158,9 @@
   			
         	<div class="image-grid">
   			
-  			<p>Nothing to see here (yet !)</p>
+  			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Leyton Orient" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Leyton Orient 0-0 Watford<br>Brisbane Road<br>Pre-Season</p>
+			</div>
 			
 			
 		</div>
