Update and rename playergraphics.html to sportsgraphics.html

--- a/sportsgraphics.html
+++ b/sportsgraphics.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Player Graphics</title>
+	<title>Sports Graphics</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
@@ -132,8 +132,8 @@
 	
 	<div class="container">
 		<div class="centered-text">
-			<h1>Player Graphics</h1>
-			<p>This is a collection of graphics that I have created of football players.</p>
+			<h1>Sports Graphics</h1>
+			<p>This is a collection of graphics that I have created for sports players or sports teams.</p>
 			<br>
 		</div>
 		
