--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div><a href="/posters">posters</a></div>
             <div><a href="/47">'47 brand</a></div>
             <div><a href="/sportcheck">sport check</a></div>
-            <div><a href="/playergraphics">player graphics</a></div>
+            <div><a href="/sportsgraphics">sports graphics</a></div>
             <div><a href="/watfordfc">watford fc</a></div>
             <div><a href="/afcstaustell">afc st. austell</a></div>
             <div><a href="/northwoodfc">northwood fc</a></div>
