--- a/posters.html
+++ b/posters.html
@@ -133,12 +133,15 @@
 	<div class="container">
 		<div class="centered-text">
 			<h1>Posters</h1>
-			<p>This is a collection of posters that I have created using my portable scanner to take images from different places.</p>
+			<p>This is a collection of posters that I have created.</p>
 			<br>
 	  </div>
 		
 		<!-- Image Grid -->
 		<div class="image-grid">
+		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Watford-P.png" alt="Watford" onclick="openModal(this.src)">
+		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Nandos-P.png" alt="Nandos Sauce" onclick="openModal(this.src)">
+		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Championship-P.png" alt="Championship 25/26" onclick="openModal(this.src)">
 		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Watford_2025-P.png" alt="Watford" onclick="openModal(this.src)">
 		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Lille_2025-P.png" alt="Lille" onclick="openModal(this.src)">
 		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Porto_2025-P.png" alt="Porto" onclick="openModal(this.src)">
