--- a/posters.html
+++ b/posters.html
@@ -139,6 +139,7 @@
 		
 		<!-- Image Grid -->
 		<div class="image-grid">
+		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Edwin-P.png" alt="Edwin" onclick="openModal(this.src)">
 		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Coach-P.png" alt="Coach Headwear" onclick="openModal(this.src)">
 		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Watford-P.png" alt="Watford" onclick="openModal(this.src)">
 		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Nandos-P.png" alt="Nandos Sauce" onclick="openModal(this.src)">
