--- a/posters.html
+++ b/posters.html
@@ -139,17 +139,18 @@
 		
 		<!-- Image Grid -->
 		<div class="image-grid">
+		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/JoaoPedro-P.png" alt="Joao Pedro" onclick="openModal(this.src)">
 		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Acronym-P.png" alt="Acronym" onclick="openModal(this.src)">
 		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Edwin-P.png" alt="Edwin" onclick="openModal(this.src)">
 		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Coach-P.png" alt="Coach Headwear" onclick="openModal(this.src)">
 		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Watford-P.png" alt="Watford" onclick="openModal(this.src)">
 		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Nandos-P.png" alt="Nandos Sauce" onclick="openModal(this.src)">
 		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Championship-P.png" alt="Championship 25/26" onclick="openModal(this.src)">
-		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Watford_2025-P.png" alt="Watford" onclick="openModal(this.src)">
-		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Lille_2025-P.png" alt="Lille" onclick="openModal(this.src)">
-		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Porto_2025-P.png" alt="Porto" onclick="openModal(this.src)">
-		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Braga_2025-P.png" alt="Braga" onclick="openModal(this.src)">
-		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Hamburg_2025-P.png" alt="Hamburg" onclick="openModal(this.src)">
+		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Watford_2025-P.png" alt="Watford" onclick="openModal(this.src)">
+		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Lille_2025-P.png" alt="Lille" onclick="openModal(this.src)">
+		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Porto_2025-P.png" alt="Porto" onclick="openModal(this.src)">
+		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Braga_2025-P.png" alt="Braga" onclick="openModal(this.src)">
+		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Hamburg_2025-P.png" alt="Hamburg" onclick="openModal(this.src)">
 		  
 			
 		</div>
