--- a/sportsgraphics.html
+++ b/sportsgraphics.html
@@ -139,8 +139,8 @@
 		
 		<!-- Image Grid -->
 		<div class="image-grid">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-JoaoPedro.png" alt="Joao Pedro" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-WatfordGlass-1.png" alt="Watford FC" onclick="openModal(this.src)">
-			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Bola-1.png" alt="Marc Bola" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Louza-2.png" alt="Imran Louza" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Championship-1.png" alt="EFL Championship 2025/26 Lineup" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-PerezDuah-1.png" alt="Troy PerezDuah" onclick="openModal(this.src)">
