--- a/sportsgraphics.html
+++ b/sportsgraphics.html
@@ -140,6 +140,7 @@
 		<!-- Image Grid -->
 		<div class="image-grid">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-JoaoPedro.png" alt="Joao Pedro" onclick="openModal(this.src)">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Sarr.png" alt="Ismaila Sarr" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-WatfordGlass-1.png" alt="Watford FC" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Louza-2.png" alt="Imran Louza" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Championship-1.png" alt="EFL Championship 2025/26 Lineup" onclick="openModal(this.src)">
