--- a/sportsgraphics.html
+++ b/sportsgraphics.html
@@ -139,6 +139,7 @@
 		
 		<!-- Image Grid -->
 		<div class="image-grid">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-MLSNwaneri.png" alt="MLS Nwaneri" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Doue.png" alt="Desire Doue" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-JoaoPedro.png" alt="Joao Pedro" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Sarr.png" alt="Ismaila Sarr" onclick="openModal(this.src)">
