--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             <div><a href="/47">'47 brand</a></div>
             <div><a href="/sportcheck">sport check</a></div>
             <div><a href="/sportsgraphics">sports graphics</a></div>
+            <div><a href="/oneminutebriefs">one minute briefs</a></div>
             <div><a href="/watfordfc">watford fc</a></div>
             <div><a href="/afcstaustell">afc st. austell</a></div>
             <div><a href="/northwoodfc">northwood fc</a></div>
