--- a/posters.html
+++ b/posters.html
@@ -139,6 +139,7 @@
 		
 		<!-- Image Grid -->
 		<div class="image-grid">
+		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Bombardier-P.png" alt="Bombardier" onclick="openModal(this.src)">
 		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/JoaoPedro-P.png" alt="Joao Pedro" onclick="openModal(this.src)">
 		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Acronym-P.png" alt="Acronym" onclick="openModal(this.src)">
 		<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Posters/Edwin-P.png" alt="Edwin" onclick="openModal(this.src)">
