--- a/coverart.html
+++ b/coverart.html
@@ -132,7 +132,7 @@
 	
 	<div class="container">
 		<div class="centered-text">
-			<h1>Posters</h1>
+			<h1>Cover Arts</h1>
 			<p>This is a collection of album cover arts that I have designed.</p>
 			<br>
 	  </div>
