--- a/index.html
+++ b/index.html
@@ -100,13 +100,14 @@
         <div class="title">mikeychapman_!</div>
         <div class="menu-item" onclick="toggleDropdown('dropdown1')">projects</div>
         <div id="dropdown1" class="dropdown">
-            <div><a href="/thetoastclub">toast club</a></div>
-            <div><a href="/orbitproperty">orbit property</a></div>
+            
             <div><a href="/posters">posters</a></div>
-            <div><a href="/47">'47 brand</a></div>
-            <div><a href="/sportcheck">sport check</a></div>
+            <div><a href="/coverart">cover art</a></div>
             <div><a href="/sportsgraphics">sports graphics</a></div>
             <div><a href="/oneminutebriefs">one minute briefs</a></div>
+            <div><a href="/thetoastclub">toast club</a></div>
+            <div><a href="/orbitproperty">orbit property</a></div>
+            <div><a href="/sportcheck">sport check</a></div>
             <div><a href="/watfordfc">watford fc</a></div>
             <div><a href="/afcstaustell">afc st. austell</a></div>
             <div><a href="/northwoodfc">northwood fc</a></div>
