--- a/champ25-26.html
+++ b/champ25-26.html
@@ -159,9 +159,11 @@
         	<div class="image-grid">
   			
   			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Leyton Orient" width="333px">
-				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Leyton Orient 0-0 Watford<br>Brisbane Road<br>Pre-Season</p>
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Leyton Orient 1-1 Watford<br>Brisbane Road<br>Pre-Season</p>
 			</div>
-			
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Charlton" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Charlton Athltic 0-0 Watford<br>The Valley<br>Championship</p>
+			</div>
 			
 		</div>
 		
