--- a/coverart.html
+++ b/coverart.html
@@ -140,6 +140,7 @@
 		<!-- Image Grid -->
 		<div class="image-grid">
 
+			<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/coverart/WelcomeToDetroit-CA.png" alt="" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/coverart/Underworld-CA.png" alt="" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/coverart/DeutscheMarksV-CA.png" alt="" onclick="openModal(this.src)">
       			<img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/coverart/BandoDiaries-CA.png" alt="" onclick="openModal(this.src)">
