--- a/champ25-26.html
+++ b/champ25-26.html
@@ -162,7 +162,7 @@
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Leyton Orient 1-1 Watford<br>Brisbane Road<br>Pre-Season</p>
 			</div>
 			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Charlton" width="333px">
-				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Charlton Athltic 0-0 Watford<br>The Valley<br>Championship</p>
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Charlton Athletic 0-0 Watford<br>The Valley<br>Championship</p>
 			</div>
 			
 		</div>
