--- a/the92.html
+++ b/the92.html
@@ -261,7 +261,7 @@ and change badge opacity to 100%
 		</div>
 <!-- BLACKPOOL				-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Blackpool.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Blackpool.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Blackpool.png')">
 		</div>
 <!-- BOLTON					-->
 		<div class="image-container">
@@ -353,7 +353,7 @@ and change badge opacity to 100%
 		</div>
 <!-- EVETRON	 			-->
 		<div class="image-container">
-  		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Everton.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Everton2.png')">
+  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Everton.png" alt="#" >
 		</div>
 <!-- EXETER 				-->			
 		<div class="image-container">
@@ -650,4 +650,5 @@ and change badge opacity to 100%
 <!--		<div class="image-container">
   		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Morecambe.png" alt="#" >
 		</div> -->
+
 
