--- a/otherstadiums.html
+++ b/otherstadiums.html
@@ -269,15 +269,20 @@ and change badge opacity to 100%
 
 			
 	
+		<div class="centered-text">
 			
 			
 			
+			<div>
+				<h1>Old Stadiums</h1>
+				<p>Stadiums that I have visited before teams moved to a newer ground.</p>
+				<br>
+		  </div>
+			
+		</div>	
 			
 			
-			
-
-			
-    </div>		
+		
 		
 		<div class="centered-text">
 			
