--- a/otherstadiums.html
+++ b/otherstadiums.html
@@ -266,10 +266,7 @@ and change badge opacity to 100%
 		<div class="image-container">
   		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Carlisle.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Carlisle.png')">
 		</div>
-<!-- EVETRON	 			-->
-		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Everton.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Everton2.png')">
-		</div>			
+			
 
 			
 	
@@ -284,8 +281,11 @@ and change badge opacity to 100%
 		  </div>
 			
 		</div>	
-			
-			
+			<div class="image-row" style="padding-bottom: 50px;">
+			<!-- EVERTON	 			-->
+		<div class="image-container">
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Everton.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Everton2.png')">
+		</div>
 		
 		
 		<div class="centered-text">
