--- a/otherstadiums.html
+++ b/otherstadiums.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -266,26 +267,40 @@ and change badge opacity to 100%
 		<div class="image-container">
   		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Carlisle.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Carlisle.png')">
 		</div>
-			
+		
 
 			
 	
+		
+			
+		</div>	
+			
+
 		<div class="centered-text">
 			
 			
 			
 			<div>
 				<h1>Old Stadiums</h1>
-				<p>Stadiums that I have visited before teams moved to a newer ground.</p>
+				<p>Stadiums that I have been as part of the 92, but have since moved to another ground.</p>
 				<br>
-		  </div>
+			</div>
 			
-		</div>	
-			<div class="image-row" style="padding-bottom: 50px;">
-			<!-- EVERTON	 			-->
+		</div>
+		
+<div class="image-row" style="padding-bottom: 50px;">
+            
+
+<!-- EVETRON	 			-->
 		<div class="image-container">
   		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Everton.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Everton2.png')">
-		</div>
+		</div>			
+
+			
+	
+		
+			
+		</div>	
 		
 		
 		<div class="centered-text">
