--- a/sportsgraphics.html
+++ b/sportsgraphics.html
@@ -139,6 +139,8 @@
 		
 		<!-- Image Grid -->
 		<div class="image-grid">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Wolves.png" alt="Wolves" onclick="openModal(this.src)">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-BrunoFernandes.png" alt="Bruno Fernandes" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-JofraArcher.png" alt="Jofra Archer" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-MLSNwaneri.png" alt="MLS Nwaneri" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Doue.png" alt="Desire Doue" onclick="openModal(this.src)">
