--- a/sportsgraphics.html
+++ b/sportsgraphics.html
@@ -139,6 +139,7 @@
 		
 		<!-- Image Grid -->
 		<div class="image-grid">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Coventry-1.png" alt="Coventry City" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Irankunda-1.png" alt="Nestory Irankunda" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-TommyFleetwood-1.png" alt="Tommy Fleetwod" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Wolves.png" alt="Wolves" onclick="openModal(this.src)">
