--- a/Gumball3000.html
+++ b/Gumball3000.html
@@ -96,7 +96,7 @@
 		@media screen and (max-width: 768px) {
 			
 			body {
-			background-color: white;
+			background-color: #FF3000;
 			background-attachment: fixed;
 			
 		}
@@ -163,7 +163,7 @@
 			
 			
 		
-		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Gumball3000/Interview/Gumball-Logo-Ani.gif" alt="">
+		  <img src="https://mikeychapmanfiles.s3.eu-west-2.amazonaws.com/Portfolio/Gumball3000/Interview/Gumball-Logo-Ani.gif" style="margin-bottom: 50px" alt="">
 			
 		
 		
@@ -198,4 +198,5 @@
 
 
 
-<div id="veepn-breach-alert"></div><style>@font-face{font-family:FigtreeVF;src:url(chrome-extension://majdfhpaihoncoakbjgbdhglocklcgno/fonts/FigtreeVF.woff2) format("woff2 supports variations"),url(chrome-extension://majdfhpaihoncoakbjgbdhglocklcgno/fonts/FigtreeVF.woff2) format("woff2-variations");font-weight:100 1000;font-display:swap}</style></body></html>
+</body>
+</html>
