--- a/Gumball3000.html
+++ b/Gumball3000.html
@@ -1,4 +1,6 @@
-<html><head>
+<!DOCTYPE html>
+<html>
+	<head>
 	<title>Gumball 3000</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
@@ -195,8 +197,8 @@
 		
 	</div>
 		  	
-
+	</div>
 
 
 </body>
-</html>
+	</html>
