--- a/champ25-26.html
+++ b/champ25-26.html
@@ -164,6 +164,9 @@
 			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Charlton" width="333px">
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Charlton Athletic 1-0 Watford<br>The Valley<br>Championship</p>
 			</div>
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Charlton" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Coventry City 3-1 Watford<br>CBS Arena<br>Championship</p>
+			</div>
 			
 		</div>
 		
