--- a/sportsgraphics.html
+++ b/sportsgraphics.html
@@ -139,6 +139,10 @@
 		
 		<!-- Image Grid -->
 		<div class="image-grid">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-WATPNE.png" alt="Watford vs Preston North End" onclick="openModal(this.src)">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Newcastle.png" alt="Newcastle United" onclick="openModal(this.src)">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-WATDER.png" alt="Watford vs Derby" onclick="openModal(this.src)">
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Maamma.png" alt="Othmane Maamma" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-WATIPS.png" alt="Watford vs Ipswich" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Baah2.png" alt="Kwadwo Baah Match Day" onclick="openModal(this.src)">
 			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/PlayerGraphics/PG-Jaguars.png" alt="Jacksonville Jaguars" onclick="openModal(this.src)">
