--- a/champ25-26.html
+++ b/champ25-26.html
@@ -164,8 +164,14 @@
 			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Charlton1.png" alt="Charlton" width="333px">
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Charlton Athletic 1-0 Watford<br>The Valley<br>Championship</p>
 			</div>
-			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Coventry3.png" alt="Charlton" width="333px">
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Coventry3.png" alt="Coventry City" width="333px">
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Coventry City 3-1 Watford<br>CBS Arena<br>Championship</p>
+			</div>
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Birmingham3.png" alt="Birmingham City" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Birmingham City 2-1 Watford<br>St. Andrew's<br>Championship</p>
+			</div>
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Birmingham City" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Wrexham 0-0 Watford<br>The Racecourse<br>Championship</p>
 			</div>
 			
 		</div>
