--- a/champ25-26.html
+++ b/champ25-26.html
@@ -173,6 +173,9 @@
 			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Birmingham City" width="333px">
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Wrexham 0-0 Watford<br>The Racecourse<br>Championship</p>
 			</div>
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Norwich City" width="333px">
+				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Norwich City 0-0 Watford<br>Carrow Road<br>Championship</p>
+			</div>
 			
 		</div>
 		
