--- a/champ25-26.html
+++ b/champ25-26.html
@@ -170,7 +170,7 @@
 			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Birmingham3.png" alt="Birmingham City" width="333px">
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Birmingham City 2-1 Watford<br>St. Andrew's<br>Championship</p>
 			</div>
-			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Birmingham City" width="333px">
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Wrexham.png" alt="Wrexham" width="333px">
 				<p style="font-size: 12px; opacity: 50%; padding-bottom: 20px">Wrexham 0-0 Watford<br>The Racecourse<br>Championship</p>
 			</div>
 			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/placeholder.png" alt="Norwich City" width="333px">
