--- a/the92.html
+++ b/the92.html
@@ -581,7 +581,7 @@ and change badge opacity to 100%
 		</div>
 <!-- WREXHAM 				-->			
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Wrexham.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Wrexham.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Wrexham.png')">
 		</div>
 <!-- WYCOMBE	 			-->
 		<div class="image-container">
@@ -650,5 +650,6 @@ and change badge opacity to 100%
 <!--		<div class="image-container">
   		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Morecambe.png" alt="#" >
 		</div> -->
+
 
 
